# mpqr-dgps-firmware

./: CMakeLists.txt  app-instructio.md  connection_instruction.md  idf_component.yml  instructions.md  partitions.csv  platformio.ini  sdkconfig.freenove_esp32_s3_wroom  sdkconfig.freenove_esp32_s3_wroom.old
archieve/: ubx
components/bno055/components/bno055/: CMakeLists.txt  Kconfig.projbuild  README.md
components/bno055/components/bno055/include/: bno055.h
src/: CMakeLists.txt  bq27441.c  bq27441.h  button_service.c  button_service.h  config.h  i2c_bus.c  i2c_bus.h  idf_component.yml  main.c  power_gpio.c  power_gpio.h  system_fsm.c  system_fsm.h  telemetry.c  telemetry.h
src/app/: app_bootstrap.c  app_bootstrap.h  app_controller.c  app_controller.h  onboarding_controller.c  onboarding_controller.h
src/ble/: ble_onboarding_gatt.c  ble_onboarding_gatt.h  onboarding_protocol.c  onboarding_protocol.h
src/display/: display_driver.c  display_driver.h  display_touch_cst820.c  display_touch_cst820.h
src/network/: operation_connectivity.c  operation_connectivity.h  rtcm_forward.c  rtcm_forward.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
src/screens/: dashboard_screen.c  dashboard_screen.h
src/storage/: device_settings.c  device_settings.h
src/tasks/: display_task.c  display_task.h  fuel_gauge_task.c  fuel_gauge_task.h  gyro_task.c  gyro_task.h  ntrip_task.c  ntrip_task.h  onboarding_task.c  onboarding_task.h  power_manager_task.c  power_manager_task.h  rtk_task.c  rtk_task.h  touch_task.c  touch_task.h
src/utils/: logging.h
src/widgets/: battery_widget.c  battery_widget.h  operation_log_widget.c  operation_log_widget.h
(+636 files in other folders)
